--- a/clearwater/templates/base.html
+++ b/clearwater/templates/base.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="/static/css/bootstrap-theme.min.css">
 		<link rel="stylesheet" href="/static/css/bootstrap.min.css">
 		<link rel="stylesheet" href="/static/css/styles.css">
-		<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+		<script src="//code.jquery.com/jquery-latest.min.js"></script>
 		<script src="/static/js/bootstrap.min.js"></script>
 		<script src="/static/js/scripts.js"></script>
 		<title>{% block title %}Santa Cruz Aquaponics{% endblock %}</title>
