--- a/clearwater/templates/login.html
+++ b/clearwater/templates/login.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="/static/css/bootstrap-theme.min.css">
 	<link rel="stylesheet" href="/static/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/static/css/styles.css">
-	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+	<script src="//code.jquery.com/jquery-latest.min.js"></script>
 	<script src="/static/js/bootstrap.min.js"></script>
 	<script src="/static/js/scripts.js"></script>
 	<title>Santa Cruz Aquaponics</title>
@@ -36,7 +36,7 @@
 	
 	<div class="container" id="content">
 		<form class="form-signin" action="/login" method="POST">
-			<input class="form-control" type="username" name="username" placeholder="Username" required autofocus>
+			<input class="form-control" type="text" name="username" placeholder="Username" required autofocus>
 			<input class="form-control" type="password" name="password" placeholder="Password" required>
 			<input type="hidden" name="next" value="{{ nxt or '' }}">
 			<div class="checkbox">
